Modal view for adding an activity type

--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -105,8 +105,8 @@
     <button type="button" class="btn btn-large btn-primary" data-toggle="modal" data-target="#newActivityModal">Log New Activity</button>
 </div>
 <div id="newActivityModal" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
+    <div class="modal-dialog bg-info">
+        <div class="modal-content bg-info">
     
           <div class="modal-header">
             <h4 class="modal-title">Log New Activity</h4>
@@ -169,8 +169,8 @@
 </div>
 
 <div id="viewActivityModal" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
+    <div class="modal-dialog bg-info">
+        <div class="modal-content bg-info">
         
             <div class="modal-header gradient-buttons">
                 <h4 id="activityTitle"class="modal-title"></h4>
