--- a/app/views/activity_type/index.html.erb
+++ b/app/views/activity_type/index.html.erb
@@ -91,5 +91,73 @@
                 <% end %>
             <% end %>
         </div>
+        <div class="gradient-buttons text-center" data-toggle="modal" data-target="#newActivityTypeModal">
+            <button type="button" class="btn center-block btn-lg btn-primary">
+                Register New Acitivty Type
+            </button>
+        </div>
     </div>
+</div>
+
+<div id="newActivityTypeModal" class="modal fade">
+    <div class="modal-dialog bg-info">
+        <div class="modal-content bg-info">
+    
+          <div class="modal-header">
+            <h4 class="modal-title">Register a New Activity Type</h4>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+          </div>
+    
+          <div class="modal-body justify-content-center text-center block-center data-center">
+            <% if current_user.groupid == nil %>
+                <p>
+                    You are currently not a member of any group. 
+                    Any Activity Types you register right now will only be 
+                    available to you while you are not a member of any group.
+                </p>
+            <% else %>
+                <% if current_user.id == @groupAdminID %>
+                    <p>
+                        You are currently the group admin. Any activity types 
+                        you register here will immediately be made available to 
+                        anyone in the group.
+                    </p>
+                <% else %>
+                    <p>
+                        You are not currently the administrator of your group. If 
+                        you register an activity type right now it will not be 
+                        available until the group's administrator approves it.
+                    </p>
+                <% end %>
+            <% end %>
+            <%= form_tag onsubmit="submitNewActivityType()" do %>
+                <div class='activitytypepanel'>
+                    <div class="activity_type_feature">
+                        <p><label for = "activity_type_name">Enter Name of the Activity Type: </label></p>
+                        <em>(Must be between 5 and 50 characters)</em>
+                        <%= text_field 'activitytypes', 'name', :maxlength => 50, :minlength => 5, :size => 50, :onkeyup => "verifyActivityType()", :required => true %>
+                    </div>
+                    <br>
+                    <div class="activity_type_feature">
+                        <p><label for = "activity_type_score">Enter Score Modifier for the Activity Type: </label></p>
+                        <%= number_field 'activitytypes', 'score', :step => 'any', :size => 10, :onkeyup => "verifyActivityType()", :required => true %>
+                    </div>
+                    <br>
+                    <br>
+                    <div class="activity_type_feature">
+                        <div class="gradient-buttons">
+                            <button type="button" id="submitNewActivityTypeButton" onclick="submitNewActivityType()" class='btn center-block btn-lg btn-primary' disabled>Create New Activity Type</button>
+                        </div>
+                    </div>
+                    <br>
+                </div>
+            <% end %>
+          </div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+
+    </div>
+  </div>
 </div>
