--- a/app/views/activity_type/index.html.erb
+++ b/app/views/activity_type/index.html.erb
@@ -10,7 +10,7 @@
                 <% else %>
                     <H2 class='pagetitle'>Existing Activity Types</H2>
                     <br>
-                    <table class="table table-hover table-bordered table-condensed">
+                    <table id="activitytypetable" class="table table-hover table-bordered table-condensed">
                         <thead class="thead-light">
                             <tr>
                                 <th>Name</th>
@@ -19,10 +19,14 @@
                         </thead>
                         <tbody>
                             <% @actTypes.each do |actt| %>
-                                <tr>
-                                    <td><%= link_to actt.name, {:action => 'edit', :id => actt.id} %></td>
+                                <%= content_tag :tr, :id => "act#{actt.id}" do %>
+                                    <td>
+                                        <%= content_tag :a, :name => "#{actt.name}", :href => "javascript:void(0)", :onclick => "getActivityType(#{actt.id})", :data => {:toggle => "modal", :target => "#viewActivityTypeModal"} do %>
+                                            <%= actt.name %>
+                                        <% end %>
+                                    </td>
                                     <td><%= actt.score %></td>
-                                </tr>
+                                <% end %>
                             <% end %>
                         </tbody>
                     </table>
@@ -54,15 +58,19 @@
                                 </thead>
                                 <tbody>
                                     <% @actTypes.each do |actt| %>
-                                        <tr>
-                                            <td class='name'><%= link_to actt.name, {:action => 'edit', :id => actt.id} %></td>
+                                        <%= content_tag :tr, :id => "act#{actt.id}" do %>
+                                            <td class='name'>
+                                                <%= content_tag :a, :name => "#{actt.name}", :href => "javascript:void(0)", :onclick => "getActivityType(#{actt.id})", :data => {:toggle => "modal", :target => "#viewActivityTypeModal"} do %>
+                                                    <%= actt.name %>
+                                                <% end %>
+                                            </td>
                                             <td><%= actt.score %></td>
                                             <% if actt.verified %>
                                                 <td>Approved and Ready For Use</td>
                                             <% else %>
                                                 <td>Awaiting Approval</td>
                                             <% end %>
-                                        </tr>
+                                        <% end %>
                                     <% end %>
                                 </tbody>
                         <% else %>
@@ -75,7 +83,7 @@
                             </thead>
                             <tbody>
                                 <% @actTypes.each do |actt| %>
-                                    <tr>
+                                    <%= content_tag :tr, :id => "act#{actt.id}" do %>
                                         <td><%= actt.name %></td>
                                         <td><%= actt.score %></td>
                                         <% if actt.verified %>
@@ -83,7 +91,7 @@
                                         <% else %>
                                             <td>Awaiting Approval</td>
                                         <% end %>
-                                    </tr>
+                                    <% end %>
                                 <% end %>
                             </tbody>
                         <% end %>
@@ -160,4 +168,29 @@
 
     </div>
   </div>
+</div>
+<div id="viewActivityTypeModal" class="modal fade">
+    <div class="modal-dialog bg-info">
+        <div class="modal-content bg-info">
+        
+            <div class="modal-header gradient-buttons">
+                <h4 id="activityTypeTitle"class="modal-title"></h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            
+            <div class="modal-body">
+                <h5 id="activityTypeScore"></h5>
+                <br>
+                <div id="adminContainer" class="gradient-buttons justify-content-center text-center block-center">
+                    <br>
+                    
+                    <br>
+                </div>
+            </div>
+            
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
 </div>
