--- a/app/views/group/edit.html.erb
+++ b/app/views/group/edit.html.erb
@@ -58,8 +58,15 @@
                         </tbody>
                     </table>
                 </center>
+                <button type="button" class="btn btn-large btn-primary" data-toggle="modal" data-target="#inviteMemberModal">
+                    Invite a Member
+                </button>
+                <br>
+                <br>
             </div>
-            <button type="button" class="btn btn-large btn-primary" data-toggle="collapse" data-target="#collapsableGroupContainer">View Group Members</button>
+            <button type="button" class="btn btn-large btn-primary" data-toggle="collapse" data-target="#collapsableGroupContainer">
+                View Group Members
+            </button>
             <br>
             <br>
             <br>
@@ -104,6 +111,48 @@
             <p class='delete'>
                 <%= button_to "Delete", {:controller => 'group', :action =>'delete', :id => @group.id}, :method => 'delete', :data => {:confirm => "Are you sure you want to delete #{@group.name}?"}, :type => 'button', :class => 'btn btn-lg btn-danger' %>
             </p>
+        </div>
+    </div>
+</div>
+
+<div id="inviteMemberModal" class="modal fade">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-info">
+            <div class="modal-header">
+                <H2>Invite a user to join your group</H2>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form onsubmit="createNewInvite()">
+                    <div class="form-group">
+                        <label for="userEmail">
+                            Enter email address of user you would like to invite
+                        </label>
+                        <div class="input-group">
+                            <input type="email" class="form-control" id="userEmail">
+                            <div class="input-group-append gradient-buttons">
+                                <button type="button" class="btn btn-light" onclick="checkEmail()" id="emailButton">
+                                    Check Email
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inviteMessage">
+                            Message for the user
+                        </label>
+                        <textarea class="form-control" rows="5" id="inviteMessage">
+User,
+Come join our group to engage in activities together. </textarea>
+                    </div>
+                    <div class="form-group gradient-buttons">
+                        <button type="button" onclick="createNewInvite()" class="btn btn-primary">Send Invite</button>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            </div>
         </div>
     </div>
 </div>
