--- a/app/views/group/edit.html.erb
+++ b/app/views/group/edit.html.erb
@@ -2,79 +2,75 @@
     <H1 class='pagetitle'>Admin Page for <%= @group.name %>.</H1>
     <br>
     <div class="container">
-        <div class='groupcontainer'>
-            <div id="collapsableGroupContainer" class="collapse">
-                <H2 class='pagetitle'>Edit Group</H2>
-                <br>
-                <center>
-                    <table id="groupAdminTable" class="table table-hover table-bordered table-condensed">
-                        <thead class="thead-light">
-                            <th><a class="UP" onclick="sortGroupTableByColumn(0,'groupAdminTable')" href="javascript:void(0);">Member Name</a></th>
-                            <th><a class="UP" onclick="sortGroupTableByColumn(1,'groupAdminTable')" href="javascript:void(0);">Member Score</a></th>
-                            <th><a class="UP" onclick="sortGroupTableByColumn(2,'groupAdminTable',false,true)" href="javascript:void(0);">Last Activity</a></th>
-                            <th>            </th>
-                            <th>            </th>
-                        </thead>
-                        <tbody>
-                            <% @users.each do |user| %>
-                                <% if user.id == current_user.id %>
-                                    <tr class="curgroup">
-                                        <td><%= user.full_name %></td>
-                                        <td><%= @scores[user.id] %></td>
-                                        <% if user.lastActivity == nil %>
-                                            <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
-                                        <% else %>
-                                            <%= content_tag :td, :id =>user.lastActivity.created_at do %>
-                                                <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
-                                            <% end %>
-                                        <% end %>
-                                        <td>You are already the group admin</td>
-                                        <td></td>
-                                    </tr>
-                                <% else %>
-                                    <tr>
-                                        <td><%= user.full_name %></td>
-                                        <td><%= @scores[user.id] %></td>
-                                        <% if user.lastActivity == nil %>
-                                            <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
-                                        <% else %>
-                                            <%= content_tag :td, :id =>user.lastActivity.created_at do %>
-                                                <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
-                                            <% end %>
-                                        <% end %>
-                                        <td>
-                                            <div class="gradient-buttons">
-                                                <%= button_to "Make Group Admin", {:action => 'makeadmin', :id => @group.id, :uid => user.id}, :method => 'patch', data: {:confirm => "Are you sure you want to make #{user.full_name} the admin of #{@group.name}?"}, :type => 'button', :class => 'btn btn-lg btn-primary' %>
-                                            </div>
-                                        </td>
-                                        <td>
-                                           <div class="gradient-buttons">
-                                               <%= button_to "Kick", {:action => 'kick', :id => @group.id, :uid => user.id}, :method => 'patch', data: {:confirm => "Are you sure you want to kick #{user.full_name} from #{@group.name}? This will remove you as group admin."}, :type => 'button', :class => 'btn btn-lg btn-danger' %>
-                                           </div> 
-                                        </td>
-                                    </tr>
-                                <% end %>
-                            <% end %>
-                        </tbody>
-                    </table>
-                </center>
-                <br>
+        <div class="card bg-info text-center">
+            <div class="card-header" data-target="#collapsableGroupContainer" data-toggle="collapse" >
+                <H4>View and Edit Group Members</H4>
             </div>
-            <button type="button" class="btn btn-large btn-primary" data-toggle="collapse" data-target="#collapsableGroupContainer">
-                View Group Members
-            </button>
-            <br>
-            <br>
-            <button type="button" class="btn btn-large btn-primary" data-toggle="modal" data-target="#inviteMemberModal">
-                    Invite a Member
-            </button>
-            <br>
-            <br>
-            <br>
-            <div class="card bg-info">
-                <div class="card-header">
-                    <H4 class="justify-content-center">Messages for <%= @group.name %></H4>
+            <div id="collapsableGroupContainer" class="collapse">
+                <div class="card-body justifiy-content-center">
+                    <table id="groupAdminTable" class="table table-hover table-striped table-condensed">
+                            <thead class="thead-info">
+                                <th><a class="UP" onclick="sortGroupTableByColumn(0,'groupAdminTable')" href="javascript:void(0);">Member Name</a></th>
+                                <th><a class="UP" onclick="sortGroupTableByColumn(1,'groupAdminTable')" href="javascript:void(0);">Member Score</a></th>
+                                <th><a class="UP" onclick="sortGroupTableByColumn(2,'groupAdminTable',false,true)" href="javascript:void(0);">Last Activity</a></th>
+                                <th>            </th>
+                                <th>            </th>
+                            </thead>
+                            <tbody>
+                                <% @users.each do |user| %>
+                                    <% if user.id == current_user.id %>
+                                        <tr class="curgroup">
+                                            <td><%= user.full_name %></td>
+                                            <td><%= @scores[user.id] %></td>
+                                            <% if user.lastActivity == nil %>
+                                                <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
+                                            <% else %>
+                                                <%= content_tag :td, :id =>user.lastActivity.created_at do %>
+                                                    <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
+                                                <% end %>
+                                            <% end %>
+                                            <td>You are already the group admin</td>
+                                            <td></td>
+                                        </tr>
+                                    <% else %>
+                                        <tr>
+                                            <td><%= user.full_name %></td>
+                                            <td><%= @scores[user.id] %></td>
+                                            <% if user.lastActivity == nil %>
+                                                <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
+                                            <% else %>
+                                                <%= content_tag :td, :id =>user.lastActivity.created_at do %>
+                                                    <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
+                                                <% end %>
+                                            <% end %>
+                                            <td>
+                                                <div class="gradient-buttons">
+                                                    <%= button_to "Make Admin", {:action => 'makeadmin', :id => @group.id, :uid => user.id}, :method => 'patch', data: {:confirm => "Are you sure you want to make #{user.full_name} the admin of #{@group.name}?"}, :type => 'button', :class => 'btn btn-lg btn-primary' %>
+                                                </div>
+                                            </td>
+                                            <td>
+                                               <div class="gradient-buttons">
+                                                   <%= button_to "Kick", {:action => 'kick', :id => @group.id, :uid => user.id}, :method => 'patch', data: {:confirm => "Are you sure you want to kick #{user.full_name} from #{@group.name}? This will remove you as group admin."}, :type => 'button', :class => 'btn btn-lg btn-danger' %>
+                                               </div> 
+                                            </td>
+                                        </tr>
+                                    <% end %>
+                                <% end %>
+                            </tbody>
+                        </table>
                 </div>
+                <div class="card-footer">
+                    <button type="button" class="btn btn-large btn-primary" data-toggle="modal" data-target="#inviteMemberModal">
+                        Invite a Member
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="card bg-info text-center">
+            <div class="card-header" data-target="#messageCollapseCard" data-toggle="collapse">
+                <H4 class="justify-content-center">Messages for <%= @group.name %></H4>
+            </div>
+            <div id="messageCollapseCard" class="collapse">
                 <div id="messageContainer" class="card-body">
                     <div class="row">
                             <table id="messageTable" class="table table-striped table-hover table-borderless table-sm">
@@ -102,22 +98,27 @@
                     </div>
                 </div>
             </div>
-            <br>
-            <br>
-            <br>
-            <%= form_for @group, :url => {:action => 'update', :id => @group.id} do |g| %>
-                <p>Group Name: <%= g.text_field 'name', :value => @group.name, :maxlength => @maximumNameLength, :minlength => @minimumNameLength, :size => 50, :required => true %></p>
-                <p>Group Description: <%= g.text_field 'description', :value => @group.description, :maxlength => @maximumDescriptionLength, :minlength => @minimumDescriptionLength, :size => 50, :required => true %></p>
-                <p>Group Password (Leave blank if you do not wish to change): <%= g.password_field 'password', :size => 50%></p>
-                <br>
-                <div class = "gradient-buttons">
-                    <button type="submit" class='btn btn-lg btn-primary'>Submit Changes</button>
+        </div>
+        <div class="card bg-info text-center">
+            <div class="card-header" data-target="#collapseEditCard" data-toggle="collapse">
+                <H4>Edit Settings For <%= @group.name %></H4>
+            </div>
+            <div id="collapseEditCard" class="collapse">
+                <div class="card-body">
+                    <%= form_for @group, :url => {:action => 'update', :id => @group.id} do |g| %>
+                        <p>Group Name: <%= g.text_field 'name', :value => @group.name, :maxlength => @maximumNameLength, :minlength => @minimumNameLength, :size => 50, :required => true %></p>
+                        <p>Group Description: <%= g.text_field 'description', :value => @group.description, :maxlength => @maximumDescriptionLength, :minlength => @minimumDescriptionLength, :size => 50, :required => true %></p>
+                        <p>Group Password (Leave blank if you do not wish to change): <%= g.password_field 'password', :size => 50%></p>
+                        <br>
+                        <div class = "gradient-buttons">
+                            <button type="submit" class='btn btn-lg btn-primary'>Submit Changes</button>
+                        </div>
+                    <% end %>
                 </div>
-            <% end %>
-            <br>
-            <p class='delete'>
-                <%= button_to "Delete", {:controller => 'group', :action =>'delete', :id => @group.id}, :method => 'delete', :data => {:confirm => "Are you sure you want to delete #{@group.name}?"}, :type => 'button', :class => 'btn btn-lg btn-danger' %>
-            </p>
+                <div class="card-footer">
+                    <%= button_to "Delete Group", {:controller => 'group', :action =>'delete', :id => @group.id}, :method => 'delete', :data => {:confirm => "Are you sure you want to delete #{@group.name}?"}, :type => 'button', :class => 'btn btn-lg btn-danger' %>
+                </div>
+            </div>
         </div>
     </div>
 </div>
