--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -96,7 +96,7 @@
         </a>
       </li>
       <div id="userMenu" class="dropdown-menu bg-info" style="right: 0; left: auto;">
-        <% unless current_user.groupid==nil $>
+        <% unless current_user.groupid==nil %>
           <%= link_to "View #{current_user.groupName}", {:controller => "group", :action => "view", :id => current_user.groupid}, :class => "dropdown-item" %>
         <% end %>
         <%= link_to "Sign Out", destroy_user_session_path, :method => 'delete', :class => "dropdown-item" %>
