Added some style to buttons and collapseables

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -21,12 +21,12 @@
     <br>
     <div id="quickCollapse" class="collapse">
         <div id="quickAccordian">
-            <div class="card">
+            <div class="card bg-info">
                 <div class="card-header text-center" data-target="#collapseSubOne" data-toggle="collapse">
                     <H3>Joining a Group</H3>
                 </div>
                 <div id="collapseSubOne" class="collapse" data-parent="#quickAccordian">
-                    <div class="card-body">
+                    <div class="card-body bg-light">
                         <p>
                             If you are just starting out it's a great idea to join a group 
                             with interests common to you. The advantage to joining a group 
@@ -37,12 +37,12 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="cardbg-primary bg-info">
                 <div class="card-header text-center" data-target="#collapseSubTwo" data-toggle="collapse">
                     <H3>Create a Group</H3>
                 </div>
                 <div id="collapseSubTwo" class="collapse" data-parent="#quickAccordian">
-                    <div class="card-body">
+                    <div class="card-body bg-light">
                         <p>
                             If you cannot find a group that matches your interests or 
                             you are joining this site with a group of people you intend 
@@ -56,12 +56,12 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card bg-info">
                 <div class="card-header text-center" data-target="#collapseSubThree" data-toggle="collapse">
                     <H3>Creating an Activity Type</H3>
                 </div>
                 <div id="collapseSubThree" class="collapse" data-parent="#quickAccordian">
-                    <div class="card-body">
+                    <div class="card-body bg-light">
                         <p>
                             Before you can log an activty, you will need to create at least one activity 
                             type. Each activity type is given a name and a score modifier when it is 
@@ -80,12 +80,12 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card bg-info">
                 <div class="card-header text-center" data-target="#collapseSubFour" data-toggle="collapse">
                     <H3>Logging an Activity</H3>
                 </div>
                 <div id="collapseSubFour" class="collapse" data-parent="#quickAccordian">
-                    <div class="card-body">
+                    <div class="card-body bg-light">
                         <p>
                             When you have performed an activity you can log it on the Activity Log 
                             page to register it either for yourself or for the group you are a part
