--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -31,14 +31,18 @@
                                         <td class="text"><%= group.description %></td>
                                         <td><%= group.numMembers %></td>
                                         <td>
-                                            <%= button_to "Delete", {:controller => 'group', :action =>'delete', :id => group.id}, :method => 'delete', :data => {:confirm => "Are you sure you want to delete #{group.name}?"}, :type => 'button', :class => 'btn btn-lg btn-danger' %>
+                                            <div class="gradient-buttons">
+                                                <%= button_to "Delete", {:controller => 'group', :action =>'delete', :id => group.id}, :method => 'delete', :data => {:confirm => "Are you sure you want to delete #{group.name}?"}, :type => 'button', :class => 'btn btn-lg btn-danger' %>
+                                            </div>
                                         </td>
                                     <% else %>
                                         <td class="name"><%= link_to group.name, {:action => 'view', :id => group.id} %></td>
                                         <td><%= group.description %></td>
                                         <td><%= group.numMembers %></td>
                                         <td>
-                                            <%= button_to "Leave", {:controller => 'group', :action =>'leave', :id => group.id}, :method => 'patch', :data => {:confirm => "Are you sure you want to leave #{group.name}?"}, :type => 'button', :class => 'btn btn-lg btn-danger' %>
+                                            <div class="gradient-buttons">
+                                                <%= button_to "Leave", {:controller => 'group', :action =>'leave', :id => group.id}, :method => 'patch', :data => {:confirm => "Are you sure you want to leave #{group.name}?"}, :type => 'button', :class => 'btn btn-lg btn-danger' %>
+                                            </div>
                                         </td>
                                     <% end %>
                                 </tr>
@@ -49,9 +53,13 @@
                                     <td><%= group.numMembers %></td>
                                     <td>
                                         <% if current_user.isAdmin %>
-                                            <%= button_tag "Join", :class =>"btn btn-lg btn-primary", :type => 'button', :data => {:toggle => "modal", :target => "#joinModal#{group.id}"}, :disabled => true%>
+                                            <div class="gradient-buttons">
+                                                <%= button_tag "Join", :class =>"btn btn-lg btn-success", :type => 'button', :data => {:toggle => "modal", :target => "#joinModal#{group.id}"}, :disabled => true%>
+                                            </div>
                                         <% else %>
-                                            <%= button_tag "Join", :class =>"btn btn-lg btn-primary", :type => 'button', :data => {:toggle => "modal", :target => "#joinModal#{group.id}"} %>
+                                            <div class="gradient-buttons">
+                                                <%= button_tag "Join", :class =>"btn btn-lg btn-success", :type => 'button', :data => {:toggle => "modal", :target => "#joinModal#{group.id}"} %>
+                                            </div>
                                         <% end %>
                                     </td>
                                 </tr>
