--- a/app/views/group/view.html.erb
+++ b/app/views/group/view.html.erb
@@ -3,67 +3,68 @@
     <br>
     <div class="container">
         <div id="groupcontainer" class='groupcontainer'>
-            <div id="collapsableGroupContainer" class="collapse">
-                <H2 class='pagetitle'>View Group</H2>
-                <br>
-                <center>
-                    <table id="groupmembertable" class="table table-hover table-bordered table-condensed">
-                        <thead class="thead-light">
-                            <th><a class="UP" onclick="sortGroupTableByColumn(0,'groupmembertable')" href="javascript:void(0);">Member Name</a></th>
-                            <th><a class="UP" onclick="sortGroupTableByColumn(1,'groupmembertable')" href="javascript:void(0);">Member Score</a></th>
-                            <th><a class="UP" onclick="sortGroupTableByColumn(2,'groupmembertable',false,true)" href="javascript:void(0);">Last Activity</a></th>
-                        </thead>
-                        <tbody>
-                            <% @users.each do |user| %>
-                                <% if user.id == current_user.id %>
-                                    <tr class="curgroup">
-                                        <td><%= user.full_name %></td>
-                                        <% if @scores[user.id]==nil %>
-                                            <td>Has done nothing</td>
-                                        <% elsif @scores[user.id]==0%>
-                                            <td>Has done nothing</td>
-                                        <% else %>
-                                            <td><%= user.score.round(4) %></td>
-                                        <% end %>
-                                        <% if user.lastActivity == nil %>
-                                            <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
-                                        <% else %>
-                                            <%= content_tag :td, :id =>user.lastActivity.created_at do %>
-                                                <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
-                                            <% end %>
-                                        <% end %>
-                                    </tr>
-                                <% else %>
-                                    <tr>
-                                        <td><%= user.full_name %></td>
-                                        <% if @scores[user.id]==nil %>
-                                            <td>Has done nothing</td>
-                                        <% elsif @scores[user.id]==0%>
-                                            <td>Has done nothing</td>
-                                        <% else %>
-                                            <td><%= user.score.round(4) %></td>
-                                        <% end %>
-                                        <% if user.lastActivity == nil %>
-                                            <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
-                                        <% else %>
-                                            <%= content_tag :td, :id =>user.lastActivity.created_at do %>
-                                                <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
-                                            <% end %>
-                                        <% end %>
-                                    </tr>
-                                <% end %>
-                            <% end %>
-                        </tbody>
-                    </table>
-                </center>
-            </div>
-            <button type="button" class="btn btn-large btn-primary" data-toggle="collapse" data-target="#collapsableGroupContainer">View Group Members</button>
-            <br>
-            <br>
-            <div class="card bg-info">
-                <div class="card-header">
-                    <H4 class="justify-content-center">Messages for <%= @group.name %></H4>
+            <div class="card bg-info text-center">
+                <div class="card-header text-center" data-toggle="collapse" data-target="#collapsableGroupContainer">
+                    <H4>View Group Members</H4>
                 </div>
+                <div id="collapsableGroupContainer" class="collapse">
+                    <div class="card-body justify-content-center data-center text-center">
+                        <table id="groupmembertable" class="table table-hover table-striped table-condensed">
+                            <thead class="thead-info">
+                                <th><a class="UP" onclick="sortGroupTableByColumn(0,'groupmembertable')" href="javascript:void(0);">Member Name</a></th>
+                                <th><a class="UP" onclick="sortGroupTableByColumn(1,'groupmembertable')" href="javascript:void(0);">Member Score</a></th>
+                                <th><a class="UP" onclick="sortGroupTableByColumn(2,'groupmembertable',false,true)" href="javascript:void(0);">Last Activity</a></th>
+                            </thead>
+                            <tbody>
+                                <% @users.each do |user| %>
+                                    <% if user.id == current_user.id %>
+                                        <tr class="curgroup">
+                                            <td><%= user.full_name %></td>
+                                            <% if @scores[user.id]==nil %>
+                                                <td>Has done nothing</td>
+                                            <% elsif @scores[user.id]==0%>
+                                                <td>Has done nothing</td>
+                                            <% else %>
+                                                <td><%= user.score.round(4) %></td>
+                                            <% end %>
+                                            <% if user.lastActivity == nil %>
+                                                <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
+                                            <% else %>
+                                                <%= content_tag :td, :id =>user.lastActivity.created_at do %>
+                                                    <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
+                                                <% end %>
+                                            <% end %>
+                                        </tr>
+                                    <% else %>
+                                        <tr>
+                                            <td><%= user.full_name %></td>
+                                            <% if @scores[user.id]==nil %>
+                                                <td>Has done nothing</td>
+                                            <% elsif @scores[user.id]==0%>
+                                                <td>Has done nothing</td>
+                                            <% else %>
+                                                <td><%= user.score.round(4) %></td>
+                                            <% end %>
+                                            <% if user.lastActivity == nil %>
+                                                <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
+                                            <% else %>
+                                                <%= content_tag :td, :id =>user.lastActivity.created_at do %>
+                                                    <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
+                                                <% end %>
+                                            <% end %>
+                                        </tr>
+                                    <% end %>
+                                <% end %>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="card bg-info text-center">
+            <div class="card-header" data-target="#messageCollapseCard" data-toggle="collapse">
+                <H4 class="justify-content-center">Messages for <%= @group.name %></H4>
+            </div>
+            <div id="messageCollapseCard" class="collapse">
                 <div id="messageContainer" class="card-body">
                     <div class="row">
                             <table id="messageTable" class="table table-striped table-hover table-borderless table-sm">
@@ -91,7 +92,7 @@
                     </div>
                 </div>
             </div>
-            <br>
+        </div>
             <br>
         </div>
     </div>
