--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -106,7 +106,7 @@
 
 <div id="newGroupModal" class="modal fade">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content bg-info">
     
           <div class="modal-header">
             <h4 class="modal-title">Create New Group</h4>
