--- a/app/views/shared/_links.html.erb
+++ b/app/views/shared/_links.html.erb
@@ -18,7 +18,9 @@
   <% end %>
 <% else %>
   <br>
-  <div class="gradient-buttons text-center"><%= button_to "Return", {:action => 'index', :controller => controller.controller_name}, :method => 'get', :type => 'button', :class => 'btn btn-lg btn-primary' %></div>
+    <% unless controller.controller_name == "profile" %>
+      <div class="gradient-buttons text-center"><%= button_to "Return", {:action => 'index', :controller => controller.controller_name}, :method => 'get', :type => 'button', :class => 'btn btn-lg btn-primary' %></div>
+    <% end %>
   <br>
 <% end %>
 <br>
