--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -13,15 +13,39 @@
                 Edit Profile
             </button>
         </div>
-        <div class="modal" id="editProfileModal">
+        <div class="modal fade" id="editProfileModal">
             <div class="modal-dialog">
-                <div class="modal-content bg-info">
+                <div class="modal-content bg-info justify-content-center data-center text-center">
                     <div class="modal-header">
-                        <h4 class="modal-title">Modal Heading</h4>
+                        <h4 class="modal-title">Edit Your Profile</h4>
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <H1>Edit</H1>
+                        <form>
+                            <div class="form-group">
+                                <%= label :user, :first_name %>
+                                <%= text_field :user, :first_name, :class => "form-control", :value => current_user.first_name %>
+                            </div>
+                            <div class="form-group">
+                                <%= label :user, :last_name %>
+                                <%= text_field :user, :last_name, :class => "form-control", :value => current_user.last_name %>
+                            </div>
+                            <div class="form-group justify-content-center text-center data-center block-center gradient-buttons">
+                                <button type="button" class="btn btn-primary btn-large" data-toggle="collapse" data-target="#file_field_div">Avatar Settings</button>
+                                <div id="file_field_div" class="collapse">
+                                    <%= file_field :user, :avatar, :class => "form-control-file" %>
+                                    <% if @user.avatar? %>
+                                        <%= image_tag @user.avatar.url, class: "avatar-show-remove" %>
+                                        <%= label :user, :remove_avatar %>
+                                        <%= check_box :user, :remove_avatar %>
+                                    <% end %>
+                                </div>
+                            </div>
+                            <div class="form-group gradient-buttons">
+                                <button type="button" onclick="updateProfile()" class="btn btn-primary btn-large" data-dismiss="modal">Submit</button>
+                            </div>
+                            <%= hidden_field :user, :userid, :value => current_user.id %>
+                        </form>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
