--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -8,7 +8,11 @@
     <br>
     <div class="activitycontainer col-sm-12">
         <% if @acts.blank? %>
-            <H2 class="emptyerror">There are no stored activities!</H2>
+            <H2 class="emptyerror">
+                <div class="text-center">
+                    There are no stored activities!
+                </div>
+            </H2>
             <br>
             <%if current_user.groupid == nil %>
                 <H3>Add an activity or join a group to see activities here.</H3>
@@ -110,7 +114,9 @@
     
           <div class="modal-header">
             <h4 class="modal-title">Log New Activity</h4>
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <div class="gradient-buttons">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
           </div>
     
           <div class="modal-body justify-content-center text-center block-center data-center">
@@ -160,7 +166,7 @@
               </div>
             <% end %>
         </div>
-        <div class="modal-footer">
+        <div class="modal-footer gradient-buttons">
             <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
         </div>
 
@@ -174,7 +180,9 @@
         
             <div class="modal-header gradient-buttons">
                 <h4 id="activityTitle"class="modal-title"></h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <div class="gradient-buttons">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
             </div>
             
             <div class="modal-body">
@@ -189,7 +197,7 @@
                 <p id="activityTimestampMessage"></p>
             </div>
             
-            <div class="modal-footer">
+            <div class="modal-footer gradient-buttons">
                 <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
             </div>
         </div>
