--- a/app/views/activity_type/index.html.erb
+++ b/app/views/activity_type/index.html.erb
@@ -113,7 +113,9 @@
     
           <div class="modal-header">
             <h4 class="modal-title">Register a New Activity Type</h4>
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <div class="gradient-buttons">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
           </div>
     
           <div class="modal-body justify-content-center text-center block-center data-center">
@@ -162,7 +164,7 @@
             <% end %>
           </div>
         </div>
-        <div class="modal-footer">
+        <div class="modal-footer gradient-buttons">
             <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
         </div>
 
@@ -175,7 +177,9 @@
         
             <div class="modal-header gradient-buttons">
                 <h4 id="activityTypeTitle"class="modal-title"></h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <div class="gradient-buttons">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
             </div>
             
             <div class="modal-body">
@@ -188,7 +192,7 @@
                 </div>
             </div>
             
-            <div class="modal-footer">
+            <div class="modal-footer gradient-buttons">
                 <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
             </div>
         </div>
