Added styling and polishing

--- a/app/views/activity_type/index.html.erb
+++ b/app/views/activity_type/index.html.erb
@@ -162,7 +162,7 @@
             <% end %>
           </div>
         </div>
-        <div class="modal-footer">
+        <div class="modal-footer gradient-buttons">
             <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
         </div>
 
@@ -188,7 +188,7 @@
                 </div>
             </div>
             
-            <div class="modal-footer">
+            <div class="modal-footer gradient-buttons">
                 <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
             </div>
         </div>
