--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -97,7 +97,7 @@
                                     <%= hidden_field :user, :userid, :value => current_user.id %>
                                 </form>
                             </div>
-                            <div class="modal-footer">
+                            <div class="modal-footer gradient-buttons">
                                 <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                             </div>
                         </div>
