--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -103,6 +103,9 @@
   </ul>
   <% if user_signed_in? %>
     <ul class="navbar-nav ml-auto">
+      <li class="nav-link">
+        <%= link_to "Messages (#{current_user.mailbox.conversations.unread(current_user).count})" , {:controller => "conversations", :action => "index"}, :class => ""  %>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" data-target="#userMenu">
           User Menu
@@ -113,7 +116,7 @@
         <% unless current_user.groupid==nil %>
           <%= link_to "View #{current_user.groupName}", {:controller => "group", :action => "view", :id => current_user.groupid}, :class => "dropdown-item" %>
         <% end %>
-        <%= link_to "Messages (#{current_user.mailbox.conversations.unread(current_user).count})" , {:controller => "conversations", :action => "index"}, :class => "dropdown-item"  %>
+        
         <%= link_to "Sign Out", destroy_user_session_path, :method => 'delete', :class => "dropdown-item" %>
         
         
