--- a/app/views/activity_type/index.html.erb
+++ b/app/views/activity_type/index.html.erb
@@ -101,7 +101,7 @@
         </div>
         <div class="gradient-buttons text-center" data-toggle="modal" data-target="#newActivityTypeModal">
             <button type="button" class="btn center-block btn-lg btn-primary">
-                Register New Acitivty Type
+                Register New Activity Type
             </button>
         </div>
     </div>
