--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,7 +36,7 @@
           </div>
           <br>
           <div class="actions gradient-buttons">
-            <%= button_to "Sign Up", new_user_registration_path, :method => 'get', :type => 'button', :class => 'btn btn-lg btn-primary' %>
+            <%= button_to "Sign Up", new_user_registration_path, :method => 'get', :id => "SignUp", :type => 'button', :class => 'btn btn-lg btn-primary' %>
           </div>
         </div>
         <br>
