--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -6,7 +6,7 @@
     <%= button_to "Log In", new_session_path(resource_name), :method => 'get', :type => 'button', :class => 'btn btn-lg btn-primary' %><br />
   <% end -%>
   <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= button_to "Sign In", new_registration_path(resource_name), :method => 'get', :type => 'button', :class => 'btn btn-lg btn-primary' %><br /><br />
+    <%= button_to "Sign Up", new_registration_path(resource_name), :method => 'get', :type => 'button', :class => 'btn btn-lg btn-primary' %><br /><br />
   <% end -%>
 
   <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
