--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   
+  <!-- For glyphicons -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   
@@ -38,13 +41,13 @@
   
 </head>
 <% if controller.controller_name == "activity" %>
-  <body onload="automateActivityAJAX()" class="bg-secondary">
+  <body onload="automateActivityAJAX()" class="bg-light">
 <% elsif controller.controller_name == "group" and controller.action_name == "index" %>
-  <body onload="groupIndexPageOnLoad()" class="bg-secondary">
+  <body onload="groupIndexPageOnLoad()" class="bg-light">
 <% elsif controller.controller_name == "group" and (controller.action_name == "view" or controller.action_name == "edit") %>
-  <body onload="registerGroupMessagingActivity()" class="bg-secondary">
+  <body onload="registerGroupMessagingActivity()" class="bg-light">
 <% else %>
-  <body class="bg-secondary">
+  <body class="bg-light">
 <% end %>
 <% if controller.controller_name == "application" or controller.controller_name == "" %>
   <% @sty = "margin-bottom: 0px;" %>
@@ -57,9 +60,9 @@
   </a>
   <ul class="navbar-nav mr-auto">
     <% if user_signed_in? %>
-      <% @navLinkClass = "nav-link" %>
+      <% @navLinkClass = "nav-link white-link" %>
     <% else %>
-      <% @navLinkClass = "nav-link disabled" %>
+      <% @navLinkClass = "nav-link white-link disabled" %>
     <% end %>
     <% if controller.controller_name == "activity" %>
       <li class="nav-item active">
@@ -104,27 +107,31 @@
   <% if user_signed_in? %>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" data-target="#userMenu">
+        <a class="nav-link white-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" data-target="#userMenu">
           User Menu
         </a>
       </li>
       <div id="userMenu" class="dropdown-menu bg-info" style="right: 0; left: auto;">
-        <%= link_to "View Profile", {:controller => "profile", :action => "show", :id => current_user.id}, :class => "dropdown-item" %>
+        <%= link_to "View Profile", {:controller => "profile", :action => "show", :id => current_user.id}, :class => "dropdown-item white-link" %>
         <% unless current_user.groupid==nil %>
-          <%= link_to "View #{current_user.groupName}", {:controller => "group", :action => "view", :id => current_user.groupid}, :class => "dropdown-item" %>
+          <%= link_to "View #{current_user.groupName}", {:controller => "group", :action => "view", :id => current_user.groupid}, :class => "dropdown-item white-link" %>
         <% end %>
-        <%= link_to "Sign Out", destroy_user_session_path, :method => 'delete', :class => "dropdown-item" %>
+        <%= link_to "Sign Out", destroy_user_session_path, :method => 'delete', :class => "dropdown-item white-link" %>
       </div>
     </ul>
   <% else %>
     <div class="gradient-buttons">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <%= button_to "Sign In", new_user_session_path, :method => 'get', :type => 'button', :class => 'btn btn-md btn-primary' %>
-        </li>
-        <li class="nav-item">
-          <%= button_to "Sign Up", new_user_registration_path, :method => 'get', :type => 'button', :class => 'btn btn-md btn-primary' %>
-        </li>
+        <% unless controller.controller_name == "sessions" and controller.action_name == "new" %>
+          <li class="nav-item">
+            <%= button_to "Sign In", new_user_session_path, :method => 'get', :type => 'button', :class => 'btn btn-md btn-primary' %>
+          </li>
+        <% end %>
+        <% unless controller.controller_name == "registrations" and controller.action_name == "new" %>
+          <li class="nav-item">
+            <%= button_to "Sign Up", new_user_registration_path, :method => 'get', :type => 'button', :class => 'btn btn-md btn-primary' %>
+          </li>
+        <% end %>
       </ul>
     </div>
   <% end %>
