--- a/app/views/activity_type/index.html.erb
+++ b/app/views/activity_type/index.html.erb
@@ -39,8 +39,8 @@
                     </center>
                 <% else %>
                     <center>
-                        <input type='text' id='activityTypeSearchInput' class='searchBar' onkeyup='activityTypeSearch()' placeholder='Search for an entry...' title='Search here'>
-                        <select id='activityTypeSearchSelect' class='selectBar' onchange='activityTypeSearch()'>
+                        <input type='text' id='activityTypeSearchInput' class='searchBar bg-info' onkeyup='activityTypeSearch()' placeholder='Search for an entry...' title='Search here'>
+                        <select id='activityTypeSearchSelect' class='selectBar bg-info' onchange='activityTypeSearch()'>
                             <option>Name</option>
                             <option>Score</option>
                         </select>
