--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -6,8 +6,8 @@
                 <H3>There are currently no groups.</H3>
             <% else %>
                 <div class="justify-content-center text-center data-center">
-                    <input type="text" id="groupSearchInput" class="searchBar" onkeyup="groupSearch()" placeholder="Search for a group..." title="Search here">
-                    <select id='groupSearchSelect' class='selectBar' onchange="groupSearch()">
+                    <input type="text" id="groupSearchInput" class="searchBar bg-info" onkeyup="groupSearch()" placeholder="Search for a group..." title="Search here">
+                    <select id='groupSearchSelect' class='selectBar bg-info' onchange="groupSearch()">
                         <option>Group Name</option>
                         <option>Group Description</option>
                         <option>Number of Members</option>
