--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -27,6 +27,7 @@
                         <option>Duration</option>
                         <option>Performer</option>
                     </select>
+                    <button type="button" class="btn btn-info" style="height: 50px" data-toggle="modal" data-target="#newActivityModal"><i class="fa fa-plus"></i></button>
                 </div>
             </div>
             
