Cleaned up a little bit

--- a/app/views/shared/_links.html.erb
+++ b/app/views/shared/_links.html.erb
@@ -1,21 +1,21 @@
 <!-- These links are for inside the controller -->
 <br>
 <% if controller.action_name == "index" %>
-  
-  
+  <div class='row justify-content-center block-center data-center text-center'>
   <!-- These links are to other controllers-->
   <% if controller.controller_name != nil and controller.controller_name != "activity" %>
-    <div class="gradient-buttons text-center"><%= button_to "View Activity Log", {:action => 'index', :controller => 'activity'}, :method => 'get', :type => 'button', :class => 'btn center-block btn-lg btn-primary' %></div>
+    <div class="gradient-buttons text-center d-inline"><%= button_to "View Activity Log", {:action => 'index', :controller => 'activity'}, :method => 'get', :type => 'button', :class => 'btn center-block btn-lg btn-primary' %></div>
     <br>
   <% end %>
   <% if controller.controller_name != "activity_type" %>
-    <div class="gradient-buttons text-center"><%= button_to "View Activity Types", {:action => 'index', :controller => 'activity_type'}, :method => 'get', :type => 'button', :class => 'btn center-block btn-lg btn-primary' %></div>
+    <div class="gradient-buttons text-center d-inline"><%= button_to "View Activity Types", {:action => 'index', :controller => 'activity_type'}, :method => 'get', :type => 'button', :class => 'btn center-block btn-lg btn-primary' %></div>
     <br>
   <% end %>
   <% if controller.controller_name != "group" %>
-    <div class="gradient-buttons text-center"><%= button_to "View Groups", {:action => 'index', :controller => 'group'}, :method => 'get', :type => 'button', :class => 'btn center-block btn-lg btn-primary' %></div>
+    <div class="gradient-buttons text-center d-inline"><%= button_to "View Groups", {:action => 'index', :controller => 'group'}, :method => 'get', :type => 'button', :class => 'btn center-block btn-lg btn-primary' %></div>
     <br>
   <% end %>
+  </div>
 <% else %>
   <br>
     <% unless controller.controller_name == "profile" %>
