--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -106,8 +106,12 @@
   </ul>
   <% if user_signed_in? %>
     <ul class="navbar-nav ml-auto">
-      <li class="nav-link">
-        <%= link_to "Messages (#{current_user.mailbox.conversations.unread(current_user).count})" , {:controller => "conversations", :action => "index"}, :class => ""  %>
+      <li class="nav-item">
+        <% if current_user.mailbox.conversations.unread(current_user).count > 0 %>
+          <a class="nav-link white-link" href="/conversations/all"><span class="fa fa-envelope"></span>(<%= current_user.mailbox.conversations.unread(current_user).count%>)</a>
+        <% else %>
+            <a class="nav-link white-link" href="/conversations/all"><span class="fa fa-inbox"></span></a>
+        <% end %>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link white-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" data-target="#userMenu">
