--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -6,10 +6,11 @@
                 <div class="card-header bg-info text-center">
                     <H2>User Profile for <%=@user.full_name%></H2>
                 </div>
-            <% if @user.id != current_user.id %>
+            <% unless @user.id == current_user.id %>
                 <%= link_to "Send This Person A Message", new_conversation_path(:user => @user.id) %>
+            <% else %>
+                <%= link_to "Check your messages", :controller => :conversations, :action => :index %>
             <% end %>
-            <%= link_to "Check your messages", :controller => :conversations, :action => :index %>
             <div class="card-body">
                 <div class="text-center">
                     <h4>Email: <%= @user.email %></h4>
