--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -24,14 +24,14 @@
             <div id="activityLogContainer">
         <% end %>
             <div class="input-group input-group-lg mb-3 justify-content-center">
-                <input type="text" id="activitySearchInput" class="searchBar bg-info" onkeyup="activitySearch()" placeholder="Search for an entry..." title="Search here">
+                <input type="text" id="activitySearchInput" class="searchBar bg-success" style="color: white; border: 0px;" onkeyup="activitySearch()" placeholder="Search for an entry..." title="Search here">
                 <div class="input-group-append">
-                    <select id='activitySearchSelect' class='selectBar bg-info' onchange="activitySearch()">
+                    <select id='activitySearchSelect' class='selectBar bg-success' style="color: white; border: 0px;" onchange="activitySearch()">
                         <option>Activity Type</option>
                         <option>Duration</option>
                         <option>Performer</option>
                     </select>
-                    <button type="button" class="btn btn-info" style="height: 50px" data-toggle="modal" data-target="#newActivityModal"><i class="fa fa-plus"></i></button>
+                    <button type="button" class="btn btn-success" style="border: 0px;" data-toggle="modal" data-target="#newActivityModal"><i class="fa fa-plus"></i></button>
                 </div>
             </div>
             
@@ -149,7 +149,7 @@
                         </div>
                         <div class="activity_feature">
                             <p><label for = "activity_duration">Enter Activity Duration in Minutes: </label></p>
-                            <%= number_field 'activities', 'duration', :required => true, :step=>'any', :class => "form-control" %>
+                            <%= number_field 'activities', 'duration', :required => true, :step=>'any', :class => "form-control", :min => "1" %>
                         </div>
                         <br>
                         <br>
