--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -108,14 +108,14 @@
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
         <% if current_user.mailbox.conversations.unread(current_user).count > 0 %>
-          <a class="nav-link white-link" href="/conversations/all"><span class="fa fa-envelope"></span>(<%= current_user.mailbox.conversations.unread(current_user).count%>)</a>
+          <a class="nav-link white-link" style="font-size: 24px;" href="/conversations/all"><span class="fa fa-envelope"></span>(<%= current_user.mailbox.conversations.unread(current_user).count%>)</a>
         <% else %>
-            <a class="nav-link white-link" href="/conversations/all"><span class="fa fa-inbox"></span></a>
+            <a class="nav-link white-link" style="font-size: 24px;" href="/conversations/all"><span class="fa fa-inbox"></span></a>
         <% end %>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link white-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" data-target="#userMenu">
-          User Menu
+        <a class="nav-link white-link dropdown-toggle" style="font-size: 24px;" href="#" id="navbardrop" data-toggle="dropdown" data-target="#userMenu">
+          <span class="fa fa-user"></span>
         </a>
       </li>
       <div id="userMenu" class="dropdown-menu bg-info" style="right: 0; left: auto;">
