--- a/app/views/group/edit.html.erb
+++ b/app/views/group/edit.html.erb
@@ -93,7 +93,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" id="messageInput">
                         <div class="input-group-append gradient-buttons">
-                            <button type="button" class="btn btn-md btn-primary" onclick="submitMessage()">Submit Message</button>
+                            <button type="button" id="messageSubmit" class="btn btn-md btn-light" onclick="submitMessage()">Submit Message</button>
                         </div>
                     </div>
                 </div>
